# ladle

./: .editorconfig  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  ILLUSTRATIONS.md  LADLE-REFACTOR-PLAN.md  LICENSE-CONTENT  Makefile  NOTICE  PLAN.md  README.md  SECURITY.md  SPEC.md  book.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml
assets/css/: common.css  epub.css  print.css
docs/: THEMING.md
docs/assets/: demo.tape
examples/community-cookbook/: CONTRIBUTING.md  book.yaml
examples/community-cookbook/content/: introduction.md
examples/community-cookbook/recipes/: arroz-cenoura.md  chocolate-fondant.md  chocolate-mousse.md  congolais.md  keylime-cheesecake-nobake.md  pate-lorrain.md
examples/the-ladle-kitchen/: CONTRIBUTING.md  book.yaml
examples/the-ladle-kitchen/content/: introduction.md
examples/the-ladle-kitchen/recipes/: chocolate-loaf.md  coconut-macaroons.md  mint-tea.md  mushroom-hand-pies.md  vegetable-rice.md
recipes/: banana-cake.md  carrot-cake.md  chocolate-cake.md  pineapple-cake.md  tea-heals-everything.md
schema/: recipe.schema.json
src/ladle/: __init__.py  bake_assets.py  build_html.py  cli.py  config.py  doctor.py  gen_illustrations.py  lint.py  list_recipes.py  make_epub.py  make_pdf.py  new_book.py  theme.py  ui.py  validate.py
src/ladle/sample/: book.yaml
src/ladle/sample/content/: introduction.md
src/ladle/sample/recipes/: ginger-cooler.md  olive-oil-cake.md  skillet-greens.md
src/ladle/schema/: book.schema.json  recipe.schema.json  theme.schema.json
src/ladle/themes/default/: theme.yaml
src/ladle/themes/default/css/: common.css  epub.css  print.css
src/ladle/themes/default/templates/: epub.html.j2  print.html.j2
templates/: epub.html.j2  print.html.j2
tests/: test_build_html.py  test_cli.py  test_config.py  test_doctor.py  test_lint.py  test_list.py  test_new_book.py  test_theme.py  test_ui.py  test_validate.py
tests/fixtures/torture-book/: book.yaml
tests/fixtures/torture-book/recipes/: torture-test.md
tools/: bake_assets.py  bake_paper.py  bookconfig.py  build_html.py  doctor.py  gen_illustrations.py  illustration_prompts.py  make_epub.sh  make_pdf.mjs  make_pdf.py  migrate.py  new_book.py  prep_paper.py  validate.py
