[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# PyPI distribution name. The import package and CLI command are both `ladle`;
# the plain `ladle` name is already registered on PyPI, so we publish as
# `ladlebook` (users run `pip install ladlebook`, then the `ladle` command).
name = "ladlebook"
version = "0.2.0"
description = "Build art-directed cookbooks (PDF + EPUB) from markdown recipes."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Dimitri Kandassamy", email = "dimitri.kandassamy@gmail.com" }]
keywords = ["cookbook", "pdf", "epub", "markdown", "weasyprint", "pandoc", "publishing"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Text Processing :: Markup",
  "Topic :: Printing",
]
dependencies = [
  "Jinja2>=3.1",
  "MarkupSafe>=2.1",
  "PyYAML>=6.0",
  "jsonschema>=4.0",
  "weasyprint>=63",
  "cairosvg>=2.7",
  "Pillow>=9.4",
  "numpy>=1.26",
]

[project.optional-dependencies]
# Unit-test + lint tooling. Install with `pip install -e .[dev]`; CI installs
# `.[test]` for the pytest matrix and `.[dev]` for the lint job.
test = ["pytest>=8.0"]
# ruff is pinned exactly: its formatter output changes across releases, so an
# unpinned range drifts between a contributor's ruff and CI's. Bump deliberately.
dev = ["pytest>=8.0", "ruff==0.15.20"]

[project.urls]
Homepage = "https://github.com/dimitri-kandassamy/ladle"
Repository = "https://github.com/dimitri-kandassamy/ladle"
Issues = "https://github.com/dimitri-kandassamy/ladle/issues"

[project.scripts]
ladle = "ladle.cli:main"

# hatchling bundles every file under the package (fonts, css, templates,
# patterns, schema) into the wheel by default — without those data files an
# installed `ladle` could not build anything.
[tool.hatch.build.targets.wheel]
packages = ["src/ladle"]

[tool.hatch.build.targets.sdist]
include = ["src/ladle", "README.md", "LICENSE", "LICENSE-CONTENT", "NOTICE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# src/ layout: put the package on the path so `pytest` works from a bare
# checkout, without requiring `pip install -e .` first (mirrors the Makefile's
# PYTHONPATH=src). An editable install still takes precedence when present.
pythonpath = ["src"]
# fixtures/ holds book inputs for the CI end-to-end build, not pytest modules.
addopts = "--import-mode=importlib"

[tool.ruff]
# Must match the pinned `dev` extra above. Any other ruff (e.g. an editor's
# bundled binary) errors out instead of silently reformatting to a different style.
required-version = "==0.15.20"
target-version = "py311"
line-length = 120
extend-exclude = ["build", "dist", ".venv"]

[tool.ruff.lint]
# pyflakes (F), pycodestyle (E/W), isort (I), pyupgrade (UP), bugbear (B).
select = ["E", "F", "W", "I", "UP", "B"]
